@@ -5,7 +5,6 @@ This file is both a guide for newcomers and a todo list for oldstayers.
 * next
 * fix bugs
 *** {next,previous}-line weirdness in the presence of images
-*** ‘-l FILENAME’ silently clobbers other options (PEBKAC, strictly speaking)
 *** no error-handling in SGF parsing
 *** performance -- ‘compare-strings’ approach too clever/slow :-/
 * ideas / wishlist
